--- a/.github/workflows/generate_sitemap.yml
+++ b/.github/workflows/generate_sitemap.yml
@@ -2,8 +2,7 @@ name: Generate Sitemap
 
 on:
   push:
-    branches:
-      - gh-pages
+    branches: [main]
 
 jobs:
   build:
@@ -20,10 +19,11 @@ jobs:
       - name: Generate sitemap.xml
         run: python3 ci/generate_sitemap.py
 
-      - name: Commit sitemap.xml
-        run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'github-actions@github.com'
-          git add sitemap.xml
-          git commit -m 'Auto-generate sitemap.xml' || echo "No changes"
-          git push
+      - name: Move sitemap.xml to output
+        run: mv sitemap.xml output/
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./output
