--- a/.github/workflows/generate_sitemap.yml
+++ b/.github/workflows/generate_sitemap.yml
@@ -22,11 +22,9 @@ jobs:
       - name: Create output directory
         run: mkdir -p output
 
-      - name: Move sitemap.xml to output
-        run: mv sitemap.xml output/
+- name: Copy existing site content into output
+  run: |
+    mkdir -p output
+    cp -r * output/
+    cp sitemap.xml output/
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./output
