--- a/.github/workflows/generate_sitemap.yml
+++ b/.github/workflows/generate_sitemap.yml
@@ -9,31 +9,25 @@ jobs:
   sitemap:
     runs-on: ubuntu-latest
     steps:
-      # 2. Check out the gh-pages branch
+      # 2. Check out the gh-pages branch (with full history for lastmod)
       - name: Checkout gh-pages
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           ref: gh-pages
+          fetch-depth: 0
 
-      # 3. Set up Python
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
-
-      # 4. Generate sitemap.xml over the checked-out HTML
+      # 3. Generate sitemap.xml over the checked-out HTML
       - name: Generate sitemap.xml
-        run: |
-          # point the script at the current directory
-          SITE_ROOT="."
-          python3 src/generate_sitemap.py
+        uses: cicirello/generate-sitemap@v1
+        with:
+          path-to-root: '.'                             # your GH-Pages root
+          base-url-path: 'https://formazione-insegnamento.eu/'
 
-      # 5. Commit and push only sitemap.xml
+      # 4. Commit & push only sitemap.xml
       - name: Commit sitemap.xml
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add sitemap.xml
-          git diff --quiet --cached || git commit -m "chore: update sitemap.xml"
+          git diff --quiet --cached || git commit -m "chore: auto-update sitemap.xml"
           git push origin gh-pages
-          
