--- a/.github/workflows/generate_sitemap.yml
+++ b/.github/workflows/generate_sitemap.yml
@@ -2,32 +2,33 @@ name: Update Sitemap
 
 on:
   push:
-    branches:
-      - gh-pages
+    branches: [ main ]   # or [ ci/landing-pages ]
 
 jobs:
-  build:
+  sitemap:
     runs-on: ubuntu-latest
     steps:
-      # 1) Checkout the gh-pages branch with full history
-      - name: Checkout gh-pages
+      - name: Check out source
         uses: actions/checkout@v4
         with:
-          ref: gh-pages
           fetch-depth: 0
 
-      # 2) Generate sitemap.xml using Cicirello’s action
-      - name: Generate sitemap
-        uses: cicirello/generate-sitemap@v1
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          site_root: '.'                                    # look at the root of gh-pages
-          base_url: https://formazione-insegnamento.eu      # your mirror URL
+          python-version: '3.x'
 
-      # 3) Commit & push only sitemap.xml back to gh-pages
-      - name: Commit sitemap.xml
+      - name: Generate sitemap.xml
+        run: python3 src/generate_sitemap.py
+
+      - name: Commit & push to gh-pages
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
+          # fetch the gh-pages branch
+          git fetch origin gh-pages:gh-pages
+          git checkout gh-pages
+          mv sitemap.xml ./          # move root
           git add sitemap.xml
-          git diff --quiet --cached || git commit -m "chore: update sitemap.xml"
+          git diff --quiet --cached || git commit -m "chore: update sitemap"
           git push origin gh-pages
