--- a/.github/workflows/generate_sitemap.yml
+++ b/.github/workflows/generate_sitemap.yml
@@ -1,34 +1,33 @@
 name: Update Sitemap
 
+# 1️ Trigger whenever gh-pages is updated:
 on:
   push:
-    branches: [ main ]   # or [ ci/landing-pages ]
+    branches: [gh-pages]
 
 jobs:
   sitemap:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out source
+      # 2️ Check out the full gh-pages branch (including history)
+      - name: Checkout gh-pages
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          ref: gh-pages
+          fetch-depth: 0        # ← required for correct <lastmod> dates
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
-
+      # 3️ Run the cicirello sitemap generator over the checked-out HTML
       - name: Generate sitemap.xml
-        run: python3 src/generate_sitemap.py
+        uses: cicirello/generate-sitemap@v2
+        with:
+          base-url: 'https://formazione-insegnamento.eu'
+          # (optionally) include-files: '**/*.html'
 
-      - name: Commit & push to gh-pages
+      # 4️ Commit & push only the updated sitemap.xml
+      - name: Commit sitemap.xml
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          # fetch the gh-pages branch
-          git fetch origin gh-pages:gh-pages
-          git checkout gh-pages
-          mv sitemap.xml ./          # move root
           git add sitemap.xml
-          git diff --quiet --cached || git commit -m "chore: update sitemap"
+          git diff --quiet --cached || git commit -m "chore: update sitemap.xml"
           git push origin gh-pages
