--- a/.github/workflows/generate_sitemap.yml
+++ b/.github/workflows/generate_sitemap.yml
@@ -1,4 +1,4 @@
-name: Update Sitemap after Pages build
+name: Update Sitemap after Generate Landing Pages build
 
 on:
   workflow_run:
@@ -18,7 +18,8 @@ jobs:
           fetch-depth: 0          # ← needed for correct <lastmod> dates
 
       - name: Generate sitemap.xml
-        uses: cicirello/generate-sitemap@v3   # ← v2 isn’t published, v3 is the current release
+        id: sitemap
+        uses: cicirello/generate-sitemap@v1.10.1
         with:
           base_url: "https://formazione-insegnamento.eu"
           source_dir: "."   # your repo root is the gh-pages content
