--- a/.github/workflows/generate_sitemap.yml
+++ b/.github/workflows/generate_sitemap.yml
@@ -10,21 +10,25 @@ jobs:
   sitemap:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout the freshly-built gh-pages
+      # 1. Checkout the freshly built gh-pages branch with full history
+      - name: Checkout gh-pages
         uses: actions/checkout@v4
         with:
-          ref: gh-pages           # ← make sure you’re on gh-pages, not main
-          fetch-depth: 0          # ← needed for correct <lastmod> dates
+          ref: gh-pages        # ensure we’re on gh‑pages
+          fetch-depth: 0       # needed for correct <lastmod> dates
 
+      # 2. Generate sitemap.xml using the latest action (v1.10.1)
       - name: Generate sitemap.xml
         id: sitemap
-        uses: cicirello/generate-sitemap@v1
+        uses: cicirello/generate-sitemap@v1.10.1
         with:
-          base_url: "https://formazione-insegnamento.eu"
-          source_dir: "."   # your repo root is the gh-pages content
+          base-url-path: "https://formazione-insegnamento.eu"
+          source-dir: "."      # scan from repo root
 
-      - name: Commit and push sitemap.xml
+      # 3. Commit & push only the updated sitemap.xml back to gh‑pages
+      - name: Commit & push sitemap.xml
         run: |
           git config user.name  "github-actions"
           git config user.email "github-actions@github.com"
